<resources>
    <string name="test">test</string>
    <string name="app_name">BENKA</string>
    <string name="creator">De Cesar Osuna</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cards">Cartas</string>
    <string name="unit1">Unidad 1</string>
    <string name="unit2">Unidad 2</string>
    <string name="unit3">Unidad 3</string>
    <string name="unit4">Unidad 4</string>
    <string name="unit5">Unidad 5</string>
    <string name="unit6">Unidad 6</string>
    <string name="unit7">Unidad 7</string>
    <string name="unit8">Unidad 8</string>
    <string name="addcard">Añadir set</string>
    <string name="daigaku_e">UNIVERSIDAD</string>
    <string name="koukou_e">PREPARATORIA</string>
    <string name="gakusei_e">ESTUDIANTE</string>
    <string name="daigakusei_e">ESTUDIANTE DE UNIVERSIDAD</string>
    <string name="ryuugakusei_e">ESTUDIANTE INTERNACIONAL</string>
    <string name="sensei_e">MAESTRO</string>
    <string name="nensei_e">ESTUDIANTE DE X AÑO</string>
    <string name="ichinensei_e">ESTUDIANTE DE PRIMER AÑO</string>
    <string name="senkou_e">CARRERA UNIVERSITARIA</string>
    <string name="watashi_e">YO</string>
    <string name="tomodachi_e">AMIGO</string>
    <string name="san_e">SEÑOR/SEÑORA ...</string>
    <string name="jin_e">PERSONA</string>
    <string name="nihonjin_e">JAPONES</string>
    <string name="ima_e">AHORA</string>
    <string name="gozen_e">A.M.</string>
    <string name="gogo_e">P.M.</string>
    <string name="ji_e">EN PUNTO</string>
    <string name="ichiji_e">UNA EN PUNTO</string>
    <string name="han_e">MITAD</string>
    <string name="nijihan_e">LAS DOS Y MEDIA</string>
    <string name="nihon_e">JAPON</string>
    <string name="amerika_e">ESTADOS UNIDOS</string>
    <string name="go_e">IDIOMA ...</string>
    <string name="nihongo_e">JAPONES</string>
    <string name="sai_e">... AÑOS</string>
    <string name="denwa_e">TELEFONO</string>
    <string name="ban_e">NUMERO ...</string>
    <string name="bangou_e">NUMERO</string>
    <string name="namae_e">NOMBRE</string>
    <string name="nannani_e">QUE</string>
    <string name="anou_e">UM ...</string>
    <string name="hai_e">SI</string>
    <string name="soudesu_e">ES CORRECTO</string>
    <string name="soudesuka_e">YA VEO; ES ASI?</string>
    <string name="igirisu_e">INGLATERRA</string>
    <string name="oosutoraria_e">AUSTRALIA</string>
    <string name="kankoku_e">COREA</string>
    <string name="kanada_e">CANADA</string>
    <string name="chuugoku_e">CHINA</string>
    <string name="indo_e">INDIA</string>
    <string name="ejiputo_e">EGIPTO</string>
    <string name="firipin_e">FILIPINAS</string>
    <string name="ajiakenkyuu_e">ESTUDIOS ASIATICOS</string>
    <string name="keizai_e">ECONOMIA</string>
    <string name="kougaku_e">INGENIERIA</string>
    <string name="kokusaikankei_e">RELACIONES INTERNACIONALES</string>
    <string name="konpyuutaa_e">COMPUTADORA</string>
    <string name="seiji_e">POLITICA</string>
    <string name="seibutsugaku_e">BIOLOGIA</string>
    <string name="bijinesu_e">NEGOCIOS</string>
    <string name="bungaku_e">LITERATURA</string>
    <string name="rekishi_e">HISTORIA</string>
    <string name="isha_e">DOCTOR</string>
    <string name="kangoshi_e">ENFERMERA</string>
    <string name="koukousei_e">ESTUDIANTE DE PREPARATORIA</string>
    <string name="shufu_e">AMA DE CASA</string>
    <string name="daigakuinsei_e">ESTUDIANTE DE POSGRADO</string>
    <string name="bengoshi_e">ABOGADO</string>
    <string name="okaasan_e">MAMA</string>
    <string name="otousan_e">PAPA</string>
    <string name="oneesan_e">HERMANA MAYOR</string>
    <string name="oniisan_e">HERMANO MAYOR</string>
    <string name="imouto_e">HERMANA MENOR</string>
    <string name="otouto_e">HERMANO MENOR</string>
    <string name="kore_e">ESTO</string>
    <string name="sore_e">ESO</string>
    <string name="are_e">AQUELLO</string>
    <string name="dore_e">CUAL</string>
    <string name="kono_e">ESTE...</string>
    <string name="sono_e">ESE...</string>
    <string name="ano_e">AQUEL...</string>
    <string name="dono_e">CUAL...</string>
    <string name="koko_e">AQUI</string>
    <string name="soko_e">AHI</string>
    <string name="asoko_e">ALLI</string>
    <string name="doko_e">DONDE</string>
    <string name="dare_e">QUIEN</string>
    <string name="oishii_e">DELICIOSO</string>
    <string name="sakana_e">PESCADO</string>
    <string name="tonkatsu_e">TONKATSU (CHULETA DE CERDO FRITA)</string>
    <string name="niku_e">CARNE</string>
    <string name="menyuu_e">MENU</string>
    <string name="yasai_e">VERDURAS</string>
    <string name="kasa_e">PARAGUAS</string>
    <string name="kaban_e">BOLSA; MALETIN</string>
    <string name="kutsu_e">ZAPATOS</string>
    <string name="saifu_e">CARTERA</string>
    <string name="jiinzu_e">PANTALONES DE MEZCLILLA; JEANS</string>
    <string name="jitensha_e">BICICLETA</string>
    <string name="shinbun_e">PERIODICO</string>
    <string name="sumaho_e">TELEFONO INTELIGENTE; SMARTPHONE</string>
    <string name="tiishatsu_e">CAMISA; T-SHIRT</string>
    <string name="tokei_e">RELOJ</string>
    <string name="nooto_e">CUADERNO; NOTEBOOK</string>
    <string name="pen_e">PLUMA; PEN</string>
    <string name="booshi_e">SOMBRERO</string>
    <string name="hon_e">LIBRO</string>
    <string name="ginkou_e">BANCO</string>
    <string name="konbini_e">KONBINI; TIENDA DE CONVENIENCIA</string>
    <string name="toire_e">BAÑO</string>
    <string name="toshokan_e">BIBLIOTECA</string>
    <string name="yuubinkyoku_e">OFICINA POSTAL</string>
    <string name="eigo_e">INGLES</string>
    <string name="ikura_e">CUANTO</string>
    <string name="en_e">YEN</string>
    <string name="takai_e">CARO; ALTO</string>
    <string name="irasshaimase_e">BIENVENIDO (A NUESTRA TIENDA)</string>
    <string name="onegaishimasu_e">...; POR FAVOR</string>
    <string name="kudasai_e">DEME ... POR FAVOR</string>
    <string name="jaa_e">ENTONCES ...; SI ES ASI ...</string>
    <string name="douzo_e">POR FAVOR; AQUI ESTA</string>
    <string name="doumo_e">GRACIAS</string>
    <string name="eiga_e">PELICULA</string>
    <string name="ongaku_e">MUSICA</string>
    <string name="zasshi_e">REVISTA</string>
    <string name="supottsu_e">DEPORTES; SPORTS</string>
    <string name="deeto_e">CITA; DATE</string>
    <string name="tenisu_e">TENIS</string>
    <string name="terebi_e">TELEVISION</string>
    <string name="aisukuriimu_e">HELADO; ICE CREAM</string>
    <string name="hanbaagaa_e">HAMBURGESA</string>
    <string name="osake_e">ALCOHOL; SAKE</string>
    <string name="ocha_e">TE</string>
    <string name="koohii_e">CAFE; COFFEE</string>
    <string name="mizu_e">AGUA</string>
    <string name="asagohan_e">DESAYUNO</string>
    <string name="hirugohan_e">COMIDA; LONCHE</string>
    <string name="bangohan_e">CENA</string>
    <string name="ie_e">CASA</string>
    <string name="uchi_e">MI CASA</string>
    <string name="gakkou_e">ESCUELA</string>
    <string name="kafe_e">CAFETERIA</string>
    <string name="ashita_e">MAÑANA</string>
    <string name="kyou_e">HOY</string>
    <string name="asa_e">LA MAÑANA</string>
    <string name="konban_e">ESTA NOCHE</string>
    <string name="mainichi_e">TODO LOS DIAS</string>
    <string name="maiban_e">TODAS LAS NOCHES</string>
    <string name="shuumatsu_e">FIN DE SEMANA</string>
    <string name="doyoubi_e">SABADO</string>
    <string name="nichiyoubi_e">DOMINGO</string>
    <string name="itsu_e">CUANDO</string>
    <string name="goro_e">ALREDEDOR DE ...</string>
    <string name="iku_e">IR</string>
    <string name="kaeru_e">VOLVER; REGRESAR A CASA</string>
    <string name="kiku_e">OIR</string>
    <string name="nomu_e">BEBER</string>
    <string name="hanasu_e">HABLAR</string>
    <string name="yomu_e">LEER</string>
    <string name="okiru_e">LEVANTARSE</string>
    <string name="taberu_e">COMER</string>
    <string name="neru_e">DORMIR</string>
    <string name="miru_e">VER</string>
    <string name="kuru_e">REGRESAR</string>
    <string name="suru_e">DESPUES DE ESO; LUEGO</string>
    <string name="benkyousuru_e">ESTUDIAR</string>
    <string name="ii_e">BIEN; BUENO</string>
    <string name="hayai_e">TEMPRANO</string>
    <string name="amari_e">NO MUCHO; NO REALMENTE</string>
    <string name="zenzen_e">PARA NADA</string>
    <string name="taitei_e">USUALMENTE</string>
    <string name="chotto_e">UN POCO</string>
    <string name="tokidoki_e">A VECES</string>
    <string name="yoku_e">SEGUIDO</string>
    <string name="soudesune_e">ASI ES</string>
    <string name="demo_e">PERO</string>
    <string name="doudesuka_e">QUE TAL ...</string>
    <string name="ee_e">SI</string>
    <string name="geemu_e">JUEGO</string>
    <string name="arubaito_e">TRABAJO DE MEDIO TIEMPO</string>
    <string name="kaimono_e">COMPRAS</string>
    <string name="kurasu_e">CLASE</string>
    <string name="inu_e">PERRO</string>
    <string name="neko_e">GATO</string>
    <string name="hito_e">PERSONA</string>
    <string name="kodomo_e">NIÑO</string>
    <string name="anata_e">TU</string>
    <string name="isu_e">SILLA</string>
    <string name="tsukue_e">ESCRITORIO</string>
    <string name="shashin_e">FOTO</string>
    <string name="hana_e">FLOR</string>
    <string name="repooto_e">REPORTE; INFORME</string>
    <string name="gohan_e">ARROZ COCIDO; COMIDA</string>
    <string name="pan_e">PAN</string>
    <string name="otera_e">TEMPLO BUDISTA</string>
    <string name="kouen_e">PARQUE</string>
    <string name="suupaa_e">SUPERMERCADO</string>
    <string name="basutei_e">PARADA DEL AUTOBUS</string>
    <string name="byouin_e">HOSPITAL</string>
    <string name="hoteru_e">HOTEL</string>
    <string name="honya_e">LIBRERIA</string>
    <string name="machi_e">PUEBLO; CIUDAD PEQUEÑA</string>
    <string name="resutoran_e">RESTAURANTE</string>
    <string name="kinou_e">AYER</string>
    <string name="jikan_e">...HORA(S)</string>
    <string name="ichijikan_e">UNA HORA</string>
    <string name="senshuu_e">LA SEMANA PASADA</string>
    <string name="toki_e">CUANDO...</string>
    <string name="getsuyoubi_e">LUNES</string>
    <string name="kayoubi_e">MARTES</string>
    <string name="suiyoubi_e">MIERCOLES</string>
    <string name="mokuyoubi_e">JUEVES</string>
    <string name="kinyoubi_e">VIERNES</string>
    <string name="au_e">CONOCERSE; ENCONTRARSE CON</string>
    <string name="aru_e">HAY</string>
    <string name="kau_e">COMPRAR</string>
    <string name="kaku_e">ESCRIBIR</string>
    <string name="toru_e">TOMAR (UNA FOTO)</string>
    <string name="matsu_e">ESPERAR</string>
    <string name="wakaru_e">ENTENDER</string>
    <string name="iru_2_e">HAY (UNA PERSONA/ANIMAL)</string>
    <string name="gurai_e">AL REDEDOR (MEDIDA APROXIMADA)</string>
    <string name="gomennasai_e">LO SIENTO</string>
    <string name="sorekara_e">Y DESPUES ...</string>
    <string name="dakara_e">ASI QUE ...</string>
    <string name="takusan_e">MUCHO(S)</string>
    <string name="to_e">Y; CON (PERSONA)</string>
    <string name="doushite_e">PORQUE?</string>
    <string name="hitoride_e">SOLO</string>
    <string name="moshimoshi_e">HOLA? (USADO EN EL TELEFONO)</string>
    <string name="tabemono_k">食べ物</string>
    <string name="nomimono_k">飲み物</string>
    <string name="kudamono_k">果物</string>
    <string name="yasumi_k">休み</string>
    <string name="ryokou_k">旅行</string>
    <string name="umi_k">海</string>
    <string name="saafin_k">サーフィン</string>
    <string name="omiyage_k">お土産</string>
    <string name="developer">Desarrollador:</string>
    <string name="transcriber">Transcriptores:</string>
    <string name="graphic">Diseño gráfico:</string>
    <string name="developer_name">Cesar A. Osuna H.</string>
    <string name="transcriber_name_1">からす</string>
    <string name="graphic_name">Katherine</string>
    <string name="date_value">Fecha: Diciembre 2023 - Enero 2024</string>
</resources>