<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/unit5"
            android:icon="@drawable/ic_launcher_foreground"
            android:textStyle="italic"
            android:title="@string/unit5"/>

        <item
            android:id="@+id/unit6"
            android:icon="@drawable/ic_launcher_background"
            android:textStyle="italic"
            android:title="@string/unit6"/>

        <item
            android:id="@+id/unit7"
            android:icon="@drawable/ic_launcher_background"
            android:textStyle="italic"
            android:title="@string/unit7"/>

        <item
            android:id="@+id/unit8"
            android:icon="@drawable/ic_launcher_background"
            android:textStyle="italic"
            android:title="@string/unit8"/>
    </group>
    <item android:title="@string/test">
        <menu>
            <item
                android:id="@+id/message_dev"
                android:icon="@android:drawable/sym_action_chat"
                android:textStyle="italic"
                android:title="@string/test"/>

            <item
                android:id="@+id/find_us"
                android:icon="@android:drawable/ic_dialog_map"
                android:textStyle="italic"
                android:title="@string/test"/>
        </menu>
    </item>
</menu>