<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFEFEF"
    android:orientation="vertical"
    tools:context=".CardActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="50dp"
        android:layout_marginTop="-2dp"
        android:layout_marginBottom="-2dp"
        android:layout_marginEnd="-2dp"
        android:background="@drawable/line"
        android:dividerPadding="@dimen/cardview_default_elevation"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="40dp"
            android:fontFamily="@font/average"
            android:gravity="center"
            android:text="About us"
            android:textSize="48sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:text="Esta aplicación ayuda al aprendizaje del vocabulario japonés, buscando proporcionar a los usuarios una experiencia más efectiva y atractiva. Esto se logra mediante características clave, como la personalización del contenido, adaptadas a las necesidades individuales de cada estudiante."
            android:textSize="15sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:gravity="center"
            android:layout_marginStart="10dp"
            android:text="@string/developer"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:gravity="center"
            android:text="@string/developer_name"
            android:layout_marginStart="20dp"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:gravity="center"
            android:layout_marginStart="10dp"
            android:text="@string/transcriber"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:gravity="center"
            android:text="@string/transcriber_name_1"
            android:layout_marginStart="20dp"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:gravity="center"
            android:layout_marginStart="10dp"
            android:text="@string/graphic"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:gravity="center"
            android:text="@string/graphic_name"
            android:layout_marginStart="20dp"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            android:gravity="start"
            android:text="@string/date_value"
            android:textSize="15sp" />



    </LinearLayout>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_marginStart="40dp"
        android:src="@drawable/creditos"/>
</FrameLayout>